kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: assignment
spec:
  selector:
    app: assignment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

  type: ClusterIP
